syntax = "proto3";
import "query/queryElement.proto";
option java_package = "de.sg_o.proto.tagy.query";
option java_outer_classname = "EqualsProto";

//SpecVersion: 1

message Equals {
  QueryElement queryElement = 1;
  oneof lowerBounds {
    int64 longValue = 2;
    double doubleValue = 3;
    bool boolValue = 4;
    string stringValue = 5;
  }
  optional double doubleTolerance = 6;
}